Set up Puma, Nginx & Capistrano

--- a/app/views/twitly_mailer/subscription_mail.html.haml
+++ b/app/views/twitly_mailer/subscription_mail.html.haml
@@ -9,6 +9,6 @@
       If you want to un-subscribe, please visit the section
       %i
         'Manage'
-      at the Twitly website.
+      at the Tweetly website.
     %p
-      Sincerely yours, Twitly
+      Sincerely yours, Tweetly
