Some UI changes

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
         %h1
           Tweetly
         %p
-          Subscribe to most important tweets
+          Subscribe to the most important tweets
       - if user_signed_in?
         .menu
           .row
