--- a/app/assets/stylesheets/tweetly.scss
+++ b/app/assets/stylesheets/tweetly.scss
@@ -153,6 +153,20 @@ body {
     text-transform: uppercase;
     font-size: 1.2rem;
   }
+
+  h4 {
+    color: #7C88A2;
+    // text-transform: uppercase;
+    font-size: 1.1rem;
+  }
+}
+
+table {
+  th {
+    color: #7C88A2;
+    // text-transform: uppercase;
+    font-size: 1rem;
+  }
 }
 
 .logged-greeting {
