--- a/app/assets/stylesheets/tweetly.scss
+++ b/app/assets/stylesheets/tweetly.scss
@@ -45,7 +45,7 @@ body {
   -moz-box-shadow: 0px 8px 20px 0px rgba(34,20,55,0.5);
   box-shadow: 0px 8px 20px 0px rgba(34,20, 55,0.5);
   border: 1px solid $color-menu-border;
-  padding-top: 15px;
+  padding: 1.3rem 1rem;
 }
 
 .menu-item {
@@ -230,6 +230,11 @@ table {
   .main-container {
     margin: 0;
     width: 100%;
+  }
+
+  .menu-text {
+    margin-top: 16px;
+    font-size: 0.8rem;
   }
 }
 
