--- a/app/views/subscriptions/new.html.haml
+++ b/app/views/subscriptions/new.html.haml
@@ -2,9 +2,11 @@
 = show_error(@users[:error])
 = form_tag({controller: 'subscriptions', action: 'search'}, class: 'form-horizontal') do
   .form-group
-    = label_tag :name, 'Find a user to follow',class: 'control-label col-sm-4'
-    .col-sm-6
-      = text_field_tag :name, nil, class: 'form-control'
+    .row
+      = label_tag :name, 'Find a user to follow',class: 'control-label col-sm-8'
+    .row
+      .col-sm-9
+        = text_field_tag :name, nil, class: 'form-control'
   .form-group
     .col-sm-offset-2.col-sm-4
       = submit_tag 'Search', class: 'button button-gray'
